--- a/app/src/main/res/layout/activity_shopper_signup.xml
+++ b/app/src/main/res/layout/activity_shopper_signup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ShopperSignup">
+    tools:context=".shopper.ShopperSignup">
 
     <RelativeLayout
         android:layout_width="match_parent"
