--- a/app/src/main/res/layout/fragment_shop_owner_profile.xml
+++ b/app/src/main/res/layout/fragment_shop_owner_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/light_gray"
     android:orientation="vertical"
-    tools:context=".ShopOwnerProfile">
+    tools:context=".fragments.ShopOwnerProfile">
 
     <LinearLayout
         android:layout_width="match_parent"
