fixed - working navigation bottom sheet dialog fixed - tab layout selected or unselected tint color
junk or unused code have been removed

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -10,7 +10,9 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/HomePageTabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:tabIconTint="@color/custom_color_selector"
+        app:tabIndicatorColor="@color/sky_blue">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/HomeTabItem"
