--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -38,6 +38,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/UploadedImage2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
