--- a/app/src/main/res/layout/activity_shopper_signup.xml
+++ b/app/src/main/res/layout/activity_shopper_signup.xml
@@ -44,6 +44,7 @@
                 android:hint="First Name">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ShopperFirstNameInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black" />
@@ -62,6 +63,7 @@
                 android:hint="Last Name">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ShopperLastNameInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black" />
@@ -77,9 +79,10 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="5dp"
-                android:hint="First Name">
+                android:hint="Date of Birth">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ShopperDOBInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="date"
@@ -88,7 +91,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <RadioGroup
-                android:id="@+id/GenderRadioGroup"
+                android:id="@+id/ShopperGenderRadioGroup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -132,6 +135,7 @@
                 android:hint="Phone Number">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ShopperPhoneNumInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="phone"
@@ -151,6 +155,7 @@
                 android:hint="Address">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ShopperAddressInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black" />
@@ -169,6 +174,7 @@
                 android:hint="Email">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ShopperEmailInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
@@ -188,6 +194,7 @@
                 android:hint="Username">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ShopperUsernameInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black" />
@@ -207,6 +214,7 @@
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ShopperPasswordInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
@@ -227,6 +235,7 @@
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ShopperConfirmPassInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
