--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,7 @@
     <color name="baby_blue">#89CFF0</color>
     <color name="power_blue">#B0DFE5</color>
 
+    <!--error colors-->
+    <color name="red">#FF0000</color>
+
 </resources>
