--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -37,159 +37,11 @@
             android:background="@drawable/cust_search_box"
             app:queryHint="Search Here" />
 
-    </LinearLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:background="@color/white"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp">
-
-                        <TextView
-                            android:id="@+id/textView73"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentLeft="true"
-                            android:layout_centerInParent="true"
-                            android:layout_marginStart="16dp"
-                            android:text="Top Products"
-                            android:textColor="@color/black" />
-
-                        <TextView
-                            android:id="@+id/textView94"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:layout_toLeftOf="@+id/TopProductsImageView"
-                            android:text="See more"
-                            android:textColor="@color/black"
-                            android:textSize="10sp" />
-
-                        <ImageView
-                            android:id="@+id/TopProductsImageView"
-                            android:layout_width="10dp"
-                            android:layout_height="10dp"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerInParent="true"
-                            android:layout_marginEnd="16dp"
-                            android:src="@drawable/ic_arrow_forward" />
-
-                    </RelativeLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="16dp">
-
-                    <LinearLayout
-                        android:layout_width="180dp"
-                        android:layout_height="220dp"
-                        android:background="@color/light_gray"
-                        android:orientation="vertical"
-                        android:padding="1dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@color/power_blue"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="130dp"
-                                android:background="@color/white">
-
-                                <ImageView
-                                    android:id="@+id/TopProduct1ImageView"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    app:srcCompat="@drawable/top_product1" />
-
-                            </LinearLayout>
-
-                            <TextView
-                                android:id="@+id/textView95"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:padding="5dp"
-                                android:ellipsize="end"
-                                android:maxLines="3"
-                                android:text="@string/top_product1_name"
-                                android:textColor="@color/black" />
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="180dp"
-                        android:layout_height="220dp"
-                        android:layout_marginStart="16dp"
-                        android:background="@color/light_gray"
-                        android:orientation="vertical"
-                        android:padding="1dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@color/power_blue"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="130dp"
-                                android:gravity="center"
-                                android:background="@color/white">
-
-                                <ImageView
-                                    android:id="@+id/TopProduct2ImageView"
-                                    android:layout_width="140dp"
-                                    android:layout_height="100dp"
-                                    app:srcCompat="@drawable/top_product2" />
-
-                            </LinearLayout>
-
-                            <TextView
-                                android:id="@+id/textView96"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:padding="5dp"
-                                android:ellipsize="end"
-                                android:maxLines="3"
-                                android:text="@string/top_product2_name"
-                                android:textColor="@color/black" />
-
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
+    </LinearLayout>
 
 </LinearLayout>
